Fixed chat list overflow

--- a/src/app/chat/chat.component.css
+++ b/src/app/chat/chat.component.css
@@ -39,6 +39,12 @@ h3 {
     margin: 0;
 }
 
+#userListTitle {
+    font-family: "Circular";
+    padding: 1em 2em 1em;
+    text-align: center;
+}
+
 .deleteConversation {
     margin: 0px 0px 0px 3em;
     padding: 0.5em 1em;
@@ -50,11 +56,15 @@ h3 {
     box-shadow: 0px 0px 16px rgba(54, 54, 54, 0.185);
     margin-right: 2em;
     margin-bottom: 2em;
-    flex-grow: 1;
     display: flex;
     flex-direction: column;
+    max-height: 80vh;
 }
 
+.chatList {
+    lex-shrink: 5;
+    overflow-y: scroll;
+}
 
 .chatName {
     font-family: "Circular";
